# ImJSchema

./: .gitignore  .gitmodules  App.h  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  conanfile_emcc.txt  example.cpp  examples.h  imgui.cpp  index.html  json_schema_ui.cpp  main.cpp  schenity.cpp
cmake/: CompilerWarnings.cmake
include/ImJSchema/: ImJSchema.h  imgui_json_ui.h  imgui_widgets_t.h  json_utils.h
include/ImJSchema/detail/: imgui_widgets_t.h  json_ui_schema.h  json_utils.h
share/: 01_basic_object.json  02_basic_array.json  03_descriptions.json  04_ordering.json  05_titles.json  06_help.json  07_number_widgets.json  08_boolean_widgets.json  09_string_widgets.json  10_array_widgets.json  11_object_widgets.json  12_constants.json  13_enumerated.json  14_references.json  15_DnD.json  16_PBR.json
test/: CMakeLists.txt  catch-main.cpp  unit-json_ref.cpp  unit-json_utils.cpp  unit-parse.cpp
